[package]
name = "oof-is-back-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
rodio = "0.16.0"
console = "0.15.2"
reqwest = { version = "0.11.12", features = ["blocking"] }